# stledit_openfoam

./: .swp  CMakeLists.txt  main.cpp
headers/: colors.h  edit.h  edit.hpp  editor.h  matrix.h  matrix.hpp  merge.h  parser.h  parser.hpp  read.h  read.hpp  reader.h  stl.h  stl.hpp  tools.h  tools.hpp  toposet.h  toposet.hpp  wave.h  wave.hpp  write.h  write.hpp  writer.h
src/: edit.cpp  editor.cpp  merge.cpp  parser.cpp  read.cpp  reader.cpp  tools.cpp  toposet.cpp  wave.cpp  write.cpp  writer.cpp
